[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menus/Font_For_Theme.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/fruit3.png" type="Texture" id=2]
[ext_resource path="res://Assets/fruit1.png" type="Texture" id=3]
[ext_resource path="res://Menus/Options.gd" type="Script" id=4]
[ext_resource path="res://Assets/BackButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/BackButton_clicked.png" type="Texture" id=6]
[ext_resource path="res://Assets/BackButton_hover.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 0.972549, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.972549, 0, 1 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/digifit.ttf"

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = SubResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.631373, 0.631373, 0.631373, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 72.0
margin_top = 56.0
margin_right = 290.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="MasterSlider" type="HSlider" parent="."]
margin_left = 400.0
margin_top = 216.0
margin_right = 880.0
margin_bottom = 264.0
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -20.0
max_value = 4.0
step = 0.1
scrollable = false

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 400.0
margin_top = 264.0
margin_right = 880.0
margin_bottom = 312.0
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -20.0
max_value = 4.0
step = 0.1
scrollable = false

[node name="SFXSlider" type="HSlider" parent="."]
margin_left = 400.0
margin_top = 312.0
margin_right = 880.0
margin_bottom = 360.0
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -20.0
max_value = 4.0
step = 0.1
scrollable = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 72.0
margin_top = 216.0
margin_right = 368.0
margin_bottom = 368.0
custom_constants/separation = 40
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 256.0
margin_bottom = 152.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 15.0
margin_right = 256.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "Master  Volume:"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 57.0
margin_right = 256.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Music   Volume:"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 99.0
margin_right = 256.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 2 )
text = "Sounds  Volume:"

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 96.0
margin_top = 512.0
margin_right = 136.0
margin_bottom = 552.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[connection signal="value_changed" from="MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
